# mold

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  main.cc  mold.h
elf/: arch-arm32.cc  arch-arm64.cc  arch-riscv64.cc  cmdline.cc  icf.cc  input-files.cc  lto.cc  main.cc  mapfile.cc  mold.h  output-chunks.cc  passes.cc  subprocess.cc
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  compress.cc  demangle.cc  mold.h  perf.cc  version.h
src/lib/elf/: arch-arm32.cc  arch-arm64.cc  arch-i386.cc  arch-riscv64.cc  arch-x86-64.cc  gc-sections.cc  icf.cc  input-files.cc  input-sections.cc  lto.cc  mold.h  output-chunks.cc  passes.cc
src/wrapper/: CMakeLists.txt
